--- a/collections/ansible_collections/tok/openstack/roles/openstack_manage_servers/vars/main.yml
+++ b/collections/ansible_collections/tok/openstack/roles/openstack_manage_servers/vars/main.yml
@@ -1,22 +1,22 @@
 ---
 openstack_instances: 
   - instance_name: app1
-    group: apps
-    deployment: dev
+    group: app_servers
+    deployment: QA
     security_group_name: apps
 
   - instance_name: app2
-    group: apps
+    group: app_servers
     deployment: dev
     security_group_name: apps
 
   - instance_name: db
-    group: appdbs
+    group: db
     deployment: dev
     security_group_name: db
 
   - instance_name: frontend
-    group: frontends
+    group: load_balancers
     deployment: dev
     security_group_name: frontend
 ...
